Fixed "Undefined Settings" config visibility

--- a/css/template.less
+++ b/css/template.less
@@ -130,6 +130,7 @@ ul.btn-group {
   .label {
     display: block;
     font-weight: normal;
+    color: initial;
   }
 
   .outkey {
